3. Blur background images - requires browser supports backdrop-filter CSS.
4. Add support for 'single' URL query. When this is set, and a player name or
   id, is passed, then Material will only control this player and will ignore
   others.
5. Only show 'Append random album' in artist's album list if more than 1 album.
6. Reduce size of 'Scroll queue to current track' icon.

2.3.7
-----
1. Pulse player volume labels if playing and volume is 0 in 'Manage players'
   dialog and group/synced volume dialog.
2. Highlight subtoolbar on hover, if it will produce a menu.
3. Work-around for deleting favourite via URL also deleting others. (LMS issue
   559)
4. Allow adding dynamic playlists to favourites.

2.3.6
-----
1. Allow hover buttons on home sreen - e.g. for pinned radio stations.
2. Fix accessing undefined item.menu
3. Allow dragging favourites into folders even if set to sort favourite list.
4. Pulse volume button, or label, if volume is 0% and currently playing.
5. Fix volume label highlight if using coloured toolbars.
6. Highlight player name in toolbar on mouse-over.
7. Highlight mobile bottom nav buttons on mouse-over.
8. Fix colours of buttom nav when using coloured toolbars.

2.3.5
-----
1. Less generic pagehandler regexes.
2. Translation updates.
3. Fix certain shortcuts with macOS.
4. Expand now-laying in desktop layout with single click on cover image in
   bottom toolbar. Not for iOS though, as this shows menu on single click.
5. For mobile devices, hide bottom bar when keyboard is shown.
6. When changing volume in group player's dialog freshes all players.
7. Reset close timer on group player dialog when adjust a volume.
8. Refresh all synced players' volumes when adjust player volume in 'Manage
   players' dialog.
9. When toggle power, check status 1/2 second later as well.

2.3.4
-----
 1. Always check if an items duration is valid before using to calculate
    selection duration.