@@ -41,7 +41,9 @@ const LMS_CLEAR_QUEUE_KEYBOARD = "X";
 const LMS_QUEUE_ADD_URL_KEYBOARD = "U";
 const LMS_SCROLL_QUEUE_KEYBOARD = "T";
 const LMS_MOVE_QUEUE_KEYBOARD = "M";
-const LMS_SETTINGS_KEYBOARD = "G";
+const LMS_UI_SETTINGS_KEYBOARD = "G";
+const LMS_PLAYER_SETTINGS_KEYBOARD = "P";
+const LMS_SERVER_SETTINGS_KEYBOARD = "E";
 const LMS_INFORMATION_KEYBOARD = "I";
 const LMS_MANAGEPLAYERS_KEYBOARD = "A";
 const LMS_TRACK_INFO_KEYBOARD = "D";
