@@ -6,11 +6,13 @@
  */
 'use strict';
 
-var TB_UI_SETTINGS     = {id:"tb:settings",       icon: "settings" };
+var TB_SETTINGS        = {id:"tb:settings",       icon: "settings" };
+var TB_UI_SETTINGS     = {id:"tb:uisettings",     svg: "ui-settings" };
 var TB_PLAYER_SETTINGS = {id:"tb:playersettings", svg: "player-settings" };
 var TB_SERVER_SETTINGS = {id:"tb:serversettings", svg: "server-settings" };
+var TB_APP_SETTINGS    = {id:"tb:appsettings",    svg: "app-settings" };
 var TB_INFO            = {id:"tb:info",           icon: "info" };
-var TB_MANAGE_PLAYERS  = {id:"tb-manageplayers",  svg: "player-manager" };
+var TB_MANAGE_PLAYERS  = {id:"tb:manageplayers",  svg: "player-manager" };
 
 Vue.component('lms-toolbar', {
     template: `
@@ -173,6 +175,26 @@ Vue.component('lms-toolbar', {
  </v-btn>
 </v-toolbar>
 <v-snackbar v-model="snackbar.show" :multi-line="true" :timeout="snackbar.timeout ? snackbar.timeout : 2500" :color="snackbar.color" top>{{ snackbar.msg }}</v-snackbar>
+<v-menu v-model="showSettingsMenu" :position-x="window.innerWidth" :position-y="0">
+ <v-list>
+  <template v-for="(item, index) in settingsMenuItems">
+   <v-list-tile :href="queryParams.appSettings" v-if="TB_APP_SETTINGS.id==item.id && queryParams.appSettings">
+    <v-list-tile-avatar v-if="menuIcons"><img class="svg-img" :src="item.svg | svgIcon(darkUi)"></img></v-list-tile-avatar>
+    <v-list-tile-content>
+     <v-list-tile-title>{{item.title}}</v-list-tile-title>
+    </v-list-tile-content>
+    <v-list-tile-action v-if="item.shortcut && keyboardControl" class="menu-shortcut">{{item.shortcut}}</v-list-tile-action>
+   </v-list-tile>
+   <v-list-tile v-else-if="TB_APP_SETTINGS.id!=item.id" @click="menuAction(item.id)" v-if="TB_UI_SETTINGS.id==item.id || (TB_PLAYER_SETTINGS.id==item.id && player) || (TB_SERVER_SETTINGS.id==item.id && unlockAll)">
+    <v-list-tile-avatar v-if="menuIcons"><img class="svg-img" :src="item.svg | svgIcon(darkUi)"></img></v-list-tile-avatar>
+    <v-list-tile-content>
+     <v-list-tile-title>{{item.title}}</v-list-tile-title>
+    </v-list-tile-content>
+    <v-list-tile-action v-if="item.shortcut && keyboardControl" class="menu-shortcut">{{item.shortcut}}</v-list-tile-action>
+   </v-list-tile>
+  </template>
+ </v-list>
+</v-menu>
 </div>
     `,
     data() {
@@ -181,10 +203,12 @@ Vue.component('lms-toolbar', {
                  playerStatus: { ison: 1, isplaying: false, volume: 0, synced: false, sleepTime: undefined,
                                  current: { title:undefined, artist:undefined, album:undefined } },
                  menuItems: [],
+                 settingsMenuItems: [],
                  customActions:undefined,
                  showPlayerMenu: false,
                  showMainMenu: false,
                  showErrorMenu: false,
+                 showSettingsMenu: false,
                  otherMenuItems:{},
                  trans:{noplayer:undefined, nothingplaying:undefined, info:undefined, infoShortcut:undefined, connectionLost:undefined, showLarge:undefined,
                         showLargeShortcut:undefined, hideLarge:undefined, startPlayer:undefined, groupPlayers:undefined, standardPlayers:undefined,
@@ -316,6 +340,7 @@ Vue.component('lms-toolbar', {
             this.showPlayerMenu = false;
             this.showMainMenu = false;
             this.showErrorMenu = false;
+            this.showSettingsMenu = false;
         }.bind(this));
         bus.$on('hideMenu', function(name) {
             if (name=='main') {
@@ -324,6 +349,8 @@ Vue.component('lms-toolbar', {
                 this.showPlayerMenu = false;
             } else if (name=='error') {
                 this.showErrorMenu = false;
+            } else if (name=='settings') {
+                this.showSettingsMenu = false;
             }
         }.bind(this));
 
@@ -382,7 +409,9 @@ Vue.component('lms-toolbar', {
         }.bind(this));
 
         if (!IS_MOBILE) {
-            bindKey(LMS_SETTINGS_KEYBOARD, 'mod');
+            bindKey(LMS_UI_SETTINGS_KEYBOARD, 'mod');
+            bindKey(LMS_PLAYER_SETTINGS_KEYBOARD, 'mod');
+            bindKey(LMS_SERVER_SETTINGS_KEYBOARD, 'mod');
             bindKey(LMS_INFORMATION_KEYBOARD, 'mod');
             bindKey(LMS_MANAGEPLAYERS_KEYBOARD, 'mod');
             bindKey(LMS_TOGGLE_QUEUE_KEYBOARD, 'mod+shift');
@@ -394,9 +423,10 @@ Vue.component('lms-toolbar', {
                     return;
                 }
                 if ('mod'==modifier) {
-                    if (this.$store.state.visibleMenus.size==1 && this.$store.state.visibleMenus.has('main')) {
-                        if (LMS_SETTINGS_KEYBOARD==key || LMS_INFORMATION_KEYBOARD==key) {
-                            this.menuAction(LMS_SETTINGS_KEYBOARD==key ? TB_UI_SETTINGS.id : TB_INFO.id);
+                    if (this.$store.state.visibleMenus.size==1 && this.$store.state.visibleMenus.has('settings')) {
+                        if (LMS_UI_SETTINGS_KEYBOARD==key || LMS_PLAYER_SETTINGS_KEYBOARD==key ||  LMS_SERVER_SETTINGS_KEYBOARD==key || LMS_INFORMATION_KEYBOARD==key) {
+                            this.menuAction(LMS_UI_SETTINGS_KEYBOARD==key ? TB_UI_SETTINGS.id : LMS_PLAYER_SETTINGS_KEYBOARD==key ? TB_PLAYER_SETTINGS.id : 
+                                            LMS_SERVER_SETTINGS_KEYBOARD==key ? TB_SERVER_SETTINGS.id : TB_INFO.id);
                             bus.$emit('hideMenu', 'main');
                         }
                     } else if (this.$store.state.visibleMenus.size==1 && this.$store.state.visibleMenus.has('player')) {
@@ -405,9 +435,10 @@ Vue.component('lms-toolbar', {
                             bus.$emit('hideMenu', 'player');
                         }
                     } else if (this.$store.state.visibleMenus.size==0) {
-                        if (LMS_SETTINGS_KEYBOARD==key || LMS_INFORMATION_KEYBOARD==key ||
+                        if (LMS_UI_SETTINGS_KEYBOARD==key || LMS_PLAYER_SETTINGS_KEYBOARD==key || LMS_SERVER_SETTINGS_KEYBOARD==key || LMS_INFORMATION_KEYBOARD==key ||
                             (LMS_MANAGEPLAYERS_KEYBOARD==key && this.$store.state.players.length>1)) {
-                            this.menuAction(LMS_SETTINGS_KEYBOARD==key ? TB_UI_SETTINGS.id : LMS_INFORMATION_KEYBOARD==key ? TB_INFO.id : TB_MANAGE_PLAYERS.id);
+                            this.menuAction(LMS_UI_SETTINGS_KEYBOARD==key ? TB_UI_SETTINGS.id : LMS_PLAYER_SETTINGS_KEYBOARD==key ? TB_PLAYER_SETTINGS.id :
+                                            LMS_SERVER_SETTINGS_KEYBOARD==key ? TB_SERVER_SETTINGS.id : LMS_INFORMATION_KEYBOARD==key ? TB_INFO.id : TB_MANAGE_PLAYERS.id);
                         }
                     }
                 } else if ('alt'==modifier && 1==key.length && !isNaN(key)) {
@@ -431,15 +462,20 @@ Vue.component('lms-toolbar', {
     },
     methods: {
         initItems() {
-            TB_UI_SETTINGS.title=i18n('Settings');
-            TB_UI_SETTINGS.shortcut=shortcutStr(LMS_SETTINGS_KEYBOARD);
+            TB_SETTINGS.title=i18n('Settings');
+            TB_UI_SETTINGS.title=i18n('Interface settings');
+            TB_UI_SETTINGS.shortcut=shortcutStr(LMS_UI_SETTINGS_KEYBOARD);
             TB_PLAYER_SETTINGS.title=i18n('Player settings');
+            TB_PLAYER_SETTINGS.shortcut=shortcutStr(LMS_PLAYER_SETTINGS_KEYBOARD);
             TB_SERVER_SETTINGS.title=i18n('Server settings');
+            TB_SERVER_SETTINGS.shortcut=shortcutStr(LMS_SERVER_SETTINGS_KEYBOARD);
             TB_INFO.title=i18n('Information');
             TB_INFO.shortcut=shortcutStr(LMS_INFORMATION_KEYBOARD);
             TB_MANAGE_PLAYERS.title=i18n('Manage players');
             TB_MANAGE_PLAYERS.shortcut=shortcutStr(LMS_MANAGEPLAYERS_KEYBOARD);
-            this.menuItems = [ TB_UI_SETTINGS, TB_INFO ];
+            TB_APP_SETTINGS.title=i18n('Application settings');
+            this.menuItems = [ TB_SETTINGS, TB_INFO ];
+            this.settingsMenuItems = [ TB_UI_SETTINGS, TB_APP_SETTINGS, TB_PLAYER_SETTINGS, TB_SERVER_SETTINGS];
             this.trans = {noplayer:i18n('No Player'), nothingplaying:i18n('Nothing playing'),
                           info:i18n("Show current track information"), infoShortcut:shortcutStr(LMS_TRACK_INFO_KEYBOARD), 
                           showLarge:i18n("Expand now playing"), showLargeShortcut:shortcutStr(LMS_EXPAND_NP_KEYBOARD, true),
@@ -456,8 +492,29 @@ Vue.component('lms-toolbar', {
             }
         },
         menuAction(id) {
-            if (TB_UI_SETTINGS.id==id) {
+            if (TB_SETTINGS.id==id) {
+                if (this.$store.state.player || this.$store.state.unlockAll || queryParams.appSettings) {
+                    this.showSettingsMenu = true;
+                } else {
+                    bus.$emit('dlg.open', 'uisettings');
+                }
+            } else if (TB_UI_SETTINGS.id==id) {
                 bus.$emit('dlg.open', 'uisettings');
+            } else if (TB_PLAYER_SETTINGS.id==id) {
+                bus.$emit('dlg.open', 'playersettings');
+            } else if (TB_SERVER_SETTINGS.id==id) {
+                if (this.$store.state.unlockAll) {
+                    lmsCommand("", ["material-skin", "server"]).then(({data}) => {
+                        if (data && data.result) {
+                            var serverName=undefined==data.result.libraryname ? "" : (SEPARATOR+data.result.libraryname);
+                            bus.$emit('dlg.open', 'iframe', '/material/settings/server/basic.html', TB_SERVER_SETTINGS.title+serverName,
+                                // Keep in sync with information.js *!
+                                [{title:i18n('Shutdown'), text:i18n('Stop Logitech Media Server?'), icon:'power_settings_new', cmd:['stopserver'], confirm:i18n('Shutdown')},
+                                 {title:i18n('Restart'), text:i18n('Restart Logitech Media Server?'), icon:'replay', cmd:['restartserver'], confirm:i18n('Restart')}], 2);
+                        }
+                    }).catch(err => {
+                    });
+                }
             } else if (TB_INFO.id==id) {
                 bus.$emit('dlg.open', 'info');
             } else if (TB_MANAGE_PLAYERS.id==id) {
@@ -790,6 +847,9 @@ Vue.component('lms-toolbar', {
         },
         'showErrorMenu': function(newVal) {
             this.$store.commit('menuVisible', {name:'error', shown:newVal});
+        },
+        'showSettingsMenu': function(newVal) {
+            this.$store.commit('menuVisible', {name:'settings', shown:newVal});
         }
     },
     beforeDestroy() {
